--- a/main.css
+++ b/main.css
@@ -3,38 +3,36 @@
     font-family: Arial, Helvetica, sans-serif;
     
 }
-body
-{
-    /*background-color: lightgrey; */
-}
 
 .div1
 {
     margin: auto;
     border: 2px solid lightgray;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: white;
-    max-width: fit-content;
+    max-width: 600px;
+    box-shadow: 0px 0px 20px 10px lightgrey;
 }
 
 .cleft, .cright
 {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    width:50%;
 }
 
 .middiv, .bottom2
 {
     display: flex;
     flex-direction: row;
-    
+    flex-wrap: wrap;
 }
 
 .bottomleft, .bottomright
 {
-
+    width:50%;
 }
+
 
 h1, h2
 {
